# LineFollower_Romenia

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.ESP32-Vespa  sdkconfig.ESP32-Vespa.old  sdkconfig.QEMU-ESP32-Vespa  sdkconfig.esp32doit-devkit-v1
lib/IOs/src/: variables.h
lib/MotorService/src/: MotorService.cpp  MotorService.hpp
lib/QTRwithMUX/src/: QTRwithMUX.h
lib/RPMService/src/: RPMService.cpp  RPMService.hpp
lib/RobotData/: RobotData.cpp  RobotData.h
lib/RobotData/Motor/: dataMotor.cpp  dataMotor.h
lib/RobotData/Specifications/: dataSpec.cpp  dataSpec.h
lib/SensorService/src/: SensorService.cpp  SensorService.hpp
lib/components/MCP3008/: README.md
lib/components/RobotData/: RobotData.cpp  RobotData.h  dataEnums.hpp
lib/components/Service/: CMakeLists.txt  README.md
modules/components/CMDWrapper/: CMakeLists.txt
modules/components/DShotRMT/: CMakeLists.txt
modules/components/DriveEncoder/: CMakeLists.txt
modules/components/DriveMotors/: CMakeLists.txt
modules/components/RobotData/: CMakeLists.txt
modules/components/RobotData/src/: IOs.hpp  RobotData.cpp  RobotData.h  dataEnums.h
modules/components/RobotData/src/Motor/: dataMotor.cpp  dataMotor.h
modules/components/RobotData/src/PID/: dataPID.cpp  dataPID.h
modules/components/RobotData/src/SLatMarks/: dataSLatMarks.cpp  dataSLatMarks.h
modules/components/RobotData/src/Specifications/: dataSpec.cpp  dataSpec.h
modules/components/RobotData/src/Status/: dataStatus.cpp  dataStatus.h
modules/components/RobotData/src/VectorFloat/: dataFloat.cpp  dataFloat.h
modules/components/RobotData/src/VectorInt32/: dataInt32.cpp  dataInt32.h
modules/components/RobotData/src/VectorUint16/: dataUint16.cpp
modules/components/RobotData/src/int32Vector/: dataInt32.h
modules/components/RobotData/src/uint16Vector/: dataUint16.h
src/: CMakeLists.txt  main.cpp  sdkconfig
(+114 files in other folders)
